# currency-bot-project

./: .gitignore  pyproject.toml
currency_bot/: __main__.py  bot.py  config.py  storage.py  tradernet.py
